# muos

./: .editorconfig  .gitignore  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  install-hooks.sh  install.py  netlify.toml  pyproject.toml  requirements.txt  setup.cfg  silent_install.py  todo.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh  post_install.sh
docs/: .gitignore
docs/source/: conf.py  index.rst
hooks/: pre-commit
muos/: __init__.py  color.py  command.py  environment.py  get_disks.py  get_lines_as_list.py  get_nth_partition.py  get_static_dir.py  log.py  runner.py  step.py
muos/static/: keymaps.txt
muos/steps/: __init__.py  begin.py  bootstrap_arch_linux.py  end.py  format_disk.py  format_partitions.py  generate_fstab.py  mount_partitions.py  partition_disk.py  select_disk.py  select_pacman_mirrors.py  synchronize_ntp.py  unmount_partitions.py
muos/steps/arch_chroot/: __init__.py  generate_locales.py  install_networkmanager.py  update_locale_gen.py  update_passwords.py  update_vconsole_conf.py
netlify-cli/: package.json
scripts/: install-hooks.sh  serve  transfer
scripts/hooks/: pre-commit
src/muos/: __init__.py  boot.py  color.py  disk.py  environment.py  fzf_manager.py  get_efi_dir.py  get_nth_partition.py  lib.py  log.py  multi_select_step.py  pacman.py  partition.py  partition_type.py  runner.py  select_step.py  step.py  system.py
src/muos/etc/: __init__.py  (+4 more)
tests/: test_get_nth_partition.py
tools/netlify-cli/: package-lock.json
(+35 files in other folders)
