[tool.poetry]
name = "muos"
version = "0.0.0"
description = ""
authors = ["sakkke <w32w64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyfzf = "0.3.1"
StrEnum = "0.4.8"


[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = 'pep440'
