[tool.poetry]
name = "muos"
version = "0.0.0"
description = ""
authors = ["sakkke <w32w64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyfzf = "0.3.1"
StrEnum = "0.4.8"
Sphinx = {version = "^5.1.1", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
pytest = {version = "^7.1.3", optional = true}
pytest-codecov = {version = "^0.5.0", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
GitPython = {version = "^3.1.27", optional = true}


[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = 'pep440'

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]
test = ["GitPython", "pytest", "pytest-codecov", "pytest-cov"]
